DevOps-Project-19/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-test
  labels:
    app.kubernetes.io/managed-by: jenkins
