DevOps-Project-19/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: eks-test
  labels:
    app: nginx
spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
